feat: added hint text

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="cringe.css" />
     <script src="DOMContentLoaded.js"></script>
     <script src="preview.js"></script>
+    <script src="previewHint.js"></script>
     <script src="rules.js"></script>
   </head>
   <body>
-    <h1 class="load" href="https://example.com">Welcome!</h1>
+    <h1>Welcome!</h1>
     <h3>I'm Happy to see you!</h3>
     <a href="index2.html">nice!</a>
+    <br />
     <br />
     <br />
     <br />
