--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="preview.js"></script>
     <script src="previewHint.js"></script>
     <script src="rules.js"></script>
+    <script src="usefulFunctions.js"></script>
   </head>
   <body>
     <h1>Welcome!</h1>
