dev: improve example website

--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
     <br />
     <br />
     <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <span class="load" href="index2.html">Thank you so much!</span>
+    <span class="load" href="index2.html">Hover over me!</span>
   </body>
 </html>
