--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <br />
     <br />
     <br />
-    <span class="load" href="index2.html">Hover over me!</span><button id="loadSecond">Load Second.html</button>
-    <div class="iframe-container" style="width: 200px; height: 300px;"><iframe src="index2.html" style="width: 200px; height: 300px;"></iframe>  </div>
+    <span class="load" href="index2.html">Hover over me!</span>
   </body>
 </html>
